@@ -1,5 +1,7 @@
 *SVN*
 
+* Change the query parser to map empty GET params to "" rather than nil. Closes #5694. [Nicholas Seckar]
+
 * date_select and datetime_select take a :default option.  #7052 [nik.wakelin]
     date_select "post", "written_on", :default => 3.days.from_now
     date_select "credit_card", "bill_due", :default => { :day => 20 }
